Cleaned up code a bit broke up and created new functions added limted local storage

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <header>
-      <button id="startover"><span class="text">Start Over</span></button>
       <h1>Project Cards</h1>
-      <button id="addCard"><span class="text">Add New Card</span></button>
+      <div class="buttons">
+        <button id="addCard"><span class="text">Add New Card</span></button>
+        <button id="startover"><span class="text">Start Over</span></button>
+        <button id="savecard"><span class="text">Save</span></button>
+      </div>
     </header>
     <hr />
     <main id="app">
@@ -36,6 +39,7 @@
         <div id="completed"></div>
       </div>
     </main>
+    <footer></footer>
     <script src="script.js"></script>
   </body>
 </html>
